@@ -360,184 +360,185 @@ const int IDC_FED2KLH = 10265;
 const int IDC_EXTCATINFO = 10266;
 const int IDC_SHOWRATEONTITLE = 10267;
 const int IDC_VERTTOOLBAR = 10268;
+const int IDC_SHOWPARTFILENUMBER = 10269;
 wxSizer *PreferencesGuiTweaksTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int IDC_NNS_HANDLING = 10269;
-const int IDC_ENABLE_AUTO_FQS = 10270;
-const int IDC_ENABLE_AUTO_HQRS = 10271;
-const int IDC_HQR_VALUE = 10272;
-const int IDC_AUTO_DROP_TIMER = 10273;
+const int IDC_NNS_HANDLING = 10270;
+const int IDC_ENABLE_AUTO_FQS = 10271;
+const int IDC_ENABLE_AUTO_HQRS = 10272;
+const int IDC_HQR_VALUE = 10273;
+const int IDC_AUTO_DROP_TIMER = 10274;
 wxSizer *PreferencesSourcesDroppingTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int IDC_ENABLE_WEB = 10274;
-const int IDC_WEB_PORT = 10275;
-const int IDC_UPNP_WEBSERVER_ENABLED = 10276;
-const int IDC_WEBUPNPTCPPORT = 10277;
-const int IDC_WEB_REFRESH_TIMEOUT = 10278;
-const int IDC_WEB_GZIP = 10279;
-const int IDC_ENABLE_WEB_LOW = 10280;
-const int IDC_WEB_PASSWD = 10281;
-const int IDC_WEB_PASSWD_LOW = 10282;
-const int IDC_WEBTEMPLATE = 10283;
-const int IDC_EXT_CONN_ACCEPT = 10284;
-const int IDC_EXT_CONN_PASSWD = 10285;
-const int IDC_EXT_CONN_IP = 10286;
-const int IDC_EXT_CONN_TCP_PORT = 10287;
-const int IDC_UPNP_EC_ENABLED = 10288;
+const int IDC_ENABLE_WEB = 10275;
+const int IDC_WEB_PORT = 10276;
+const int IDC_UPNP_WEBSERVER_ENABLED = 10277;
+const int IDC_WEBUPNPTCPPORT = 10278;
+const int IDC_WEB_REFRESH_TIMEOUT = 10279;
+const int IDC_WEB_GZIP = 10280;
+const int IDC_ENABLE_WEB_LOW = 10281;
+const int IDC_WEB_PASSWD = 10282;
+const int IDC_WEB_PASSWD_LOW = 10283;
+const int IDC_WEBTEMPLATE = 10284;
+const int IDC_EXT_CONN_ACCEPT = 10285;
+const int IDC_EXT_CONN_PASSWD = 10286;
+const int IDC_EXT_CONN_IP = 10287;
+const int IDC_EXT_CONN_TCP_PORT = 10288;
+const int IDC_UPNP_EC_ENABLED = 10289;
 wxSizer *PreferencesRemoteControlsTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
 extern wxSizer *prefs_main_sizer;
 extern wxSizer *prefs_sizer;
-const int ID_PREFSLISTCTRL = 10289;
-const int ID_PREFS_OK_TOP = 10290;
-const int ID_PREFS_CANCEL_TOP = 10291;
+const int ID_PREFSLISTCTRL = 10290;
+const int ID_PREFS_OK_TOP = 10291;
+const int ID_PREFS_CANCEL_TOP = 10292;
 wxSizer *preferencesDlgTop( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int IDC_STATIC_TITLE = 10292;
-const int IDC_TITLE = 10293;
-const int IDC_STATIC_COMMENT = 10294;
-const int IDC_COMMENT = 10295;
-const int IDC_STATIC_INCOMING = 10296;
-const int IDC_INCOMING = 10297;
-const int IDC_BROWSE = 10298;
-const int IDC_STATIC_PRIO = 10299;
-const int IDC_PRIOCOMBO = 10300;
-const int IDC_STATIC_COLOR = 10301;
-const int ID_BOX_CATCOLOR = 10302;
-const int IDC_CATCOLOR = 10303;
+const int IDC_STATIC_TITLE = 10293;
+const int IDC_TITLE = 10294;
+const int IDC_STATIC_COMMENT = 10295;
+const int IDC_COMMENT = 10296;
+const int IDC_STATIC_INCOMING = 10297;
+const int IDC_INCOMING = 10298;
+const int IDC_BROWSE = 10299;
+const int IDC_STATIC_PRIO = 10300;
+const int IDC_PRIOCOMBO = 10301;
+const int IDC_STATIC_COLOR = 10302;
+const int ID_BOX_CATCOLOR = 10303;
+const int IDC_CATCOLOR = 10304;
 wxSizer *CategoriesEditWindow( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_SPLATTER = 10304;
+const int ID_SPLATTER = 10305;
 wxSizer *transferDlg( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_SERVERINFO = 10305;
-const int ID_BTN_RESET_SERVER = 10306;
+const int ID_SERVERINFO = 10306;
+const int ID_BTN_RESET_SERVER = 10307;
 wxSizer *ServerInfoLog( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_LOGVIEW = 10307;
-const int ID_BTN_RESET = 10308;
+const int ID_LOGVIEW = 10308;
+const int ID_BTN_RESET = 10309;
 wxSizer *aMuleLog( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_UPDATELIST = 10309;
-const int IDC_SERVERLISTURL = 10310;
-const int IDC_SERVERNAME = 10311;
-const int IDC_IPADDRESS = 10312;
-const int IDC_SPORT = 10313;
-const int ID_ADDTOLIST = 10314;
-const int IDC_ED2KDISCONNECT = 10315;
-const int ID_SERVERLIST = 10316;
+const int ID_UPDATELIST = 10310;
+const int IDC_SERVERLISTURL = 10311;
+const int IDC_SERVERNAME = 10312;
+const int IDC_IPADDRESS = 10313;
+const int IDC_SPORT = 10314;
+const int ID_ADDTOLIST = 10315;
+const int IDC_ED2KDISCONNECT = 10316;
+const int ID_SERVERLIST = 10317;
 wxSizer *serverListDlgUp( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_SRVLOG_NOTEBOOK = 10317;
+const int ID_SRVLOG_NOTEBOOK = 10318;
 wxSizer *serverListDlgDown( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_LOCALETEXT = 10318;
-const int ID_OK = 10319;
-const int ID_LOCALENEVERAGAIN = 10320;
+const int ID_LOCALETEXT = 10319;
+const int ID_OK = 10320;
+const int ID_LOCALENEVERAGAIN = 10321;
 wxSizer *LocaleWarning( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
 extern wxSizer *kadSizer;
-const int ID_UPDATEKADLIST = 10321;
-const int IDC_NODESLISTURL = 10322;
-const int ID_KADSCOPE = 10323;
-const int ID_NODE_IP1 = 10324;
-const int ID_NODE_IP2 = 10325;
-const int ID_NODE_IP3 = 10326;
-const int ID_NODE_IP4 = 10327;
-const int ID_NODE_PORT = 10328;
-const int ID_NODECONNECT = 10329;
-const int ID_KNOWNNODECONNECT = 10330;
-const int ID_KADDISCONNECT = 10331;
+const int ID_UPDATEKADLIST = 10322;
+const int IDC_NODESLISTURL = 10323;
+const int ID_KADSCOPE = 10324;
+const int ID_NODE_IP1 = 10325;
+const int ID_NODE_IP2 = 10326;
+const int ID_NODE_IP3 = 10327;
+const int ID_NODE_IP4 = 10328;
+const int ID_NODE_PORT = 10329;
+const int ID_NODECONNECT = 10330;
+const int ID_KNOWNNODECONNECT = 10331;
+const int ID_KADDISCONNECT = 10332;
 wxSizer *KadDlg( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_STATICTEXT = 10332;
-const int ID_ED2KINFO = 10333;
+const int ID_STATICTEXT = 10333;
+const int ID_ED2KINFO = 10334;
 wxSizer *ED2K_Info( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int IDC_SEESHARES = 10334;
-const int IDC_IPFCLIENTS = 10335;
-const int IDC_IPFSERVERS = 10336;
-const int IDC_IPFRELOAD = 10337;
-const int IDC_IPFILTERURL = 10338;
-const int IDC_IPFILTERUPDATE = 10339;
-const int IDC_AUTOIPFILTER = 10340;
-const int ID_IPFILTERLEVEL = 10341;
-const int IDC_FILTERLAN = 10342;
-const int IDC_PARANOID = 10343;
-const int IDC_SECIDENT = 10344;
+const int IDC_SEESHARES = 10335;
+const int IDC_IPFCLIENTS = 10336;
+const int IDC_IPFSERVERS = 10337;
+const int IDC_IPFRELOAD = 10338;
+const int IDC_IPFILTERURL = 10339;
+const int IDC_IPFILTERUPDATE = 10340;
+const int IDC_AUTOIPFILTER = 10341;
+const int ID_IPFILTERLEVEL = 10342;
+const int IDC_FILTERLAN = 10343;
+const int IDC_PARANOID = 10344;
+const int IDC_SECIDENT = 10345;
 wxSizer *PreferencesSecurityTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int IDC_ONLINESIG = 10345;
-const int IDC_OSUPDATE = 10346;
-const int IDC_OSDIR = 10347;
-const int IDC_SELOSDIR = 10348;
+const int IDC_ONLINESIG = 10346;
+const int IDC_OSUPDATE = 10347;
+const int IDC_OSDIR = 10348;
+const int IDC_SELOSDIR = 10349;
 wxSizer *PreferencesOnlineSigTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int IDC_MSGFILTER = 10349;
-const int IDC_MSGFILTER_ALL = 10350;
-const int IDC_MSGFILTER_NONFRIENDS = 10351;
-const int IDC_MSGFILTER_NONSECURE = 10352;
-const int IDC_MSGFILTER_WORD = 10353;
-const int IDC_MSGWORD = 10354;
+const int IDC_MSGFILTER = 10350;
+const int IDC_MSGFILTER_ALL = 10351;
+const int IDC_MSGFILTER_NONFRIENDS = 10352;
+const int IDC_MSGFILTER_NONSECURE = 10353;
+const int IDC_MSGFILTER_WORD = 10354;
+const int IDC_MSGWORD = 10355;
 wxSizer *PreferencesMessagesTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_PROXY_ENABLE_PROXY = 10355;
-const int ID_PROXY_TYPE = 10356;
-const int ID_PROXY_NAME = 10357;
-const int ID_PROXY_PORT = 10358;
-const int ID_PROXY_ENABLE_PASSWORD = 10359;
-const int ID_PROXY_USER = 10360;
-const int ID_PROXY_PASSWORD = 10361;
-const int ID_PROXY_AUTO_SERVER_CONNECT_WITHOUT_PROXY = 10362;
+const int ID_PROXY_ENABLE_PROXY = 10356;
+const int ID_PROXY_TYPE = 10357;
+const int ID_PROXY_NAME = 10358;
+const int ID_PROXY_PORT = 10359;
+const int ID_PROXY_ENABLE_PASSWORD = 10360;
+const int ID_PROXY_USER = 10361;
+const int ID_PROXY_PASSWORD = 10362;
+const int ID_PROXY_AUTO_SERVER_CONNECT_WITHOUT_PROXY = 10363;
 wxSizer *PreferencesProxyTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_REMOTE_HOST = 10363;
-const int ID_REMOTE_PORT = 10364;
-const int ID_EC_LOGIN = 10365;
-const int ID_EC_PASSWD = 10366;
-const int ID_EC_SAVE = 10367;
+const int ID_REMOTE_HOST = 10364;
+const int ID_REMOTE_PORT = 10365;
+const int ID_EC_LOGIN = 10366;
+const int ID_EC_PASSWD = 10367;
+const int ID_EC_SAVE = 10368;
 wxSizer *CoreConnect( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_VERBOSEDEBUG = 10368;
-const int ID_DEBUGCATS = 10369;
+const int ID_VERBOSEDEBUG = 10369;
+const int ID_DEBUGCATS = 10370;
 wxSizer *PreferencesDebug( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
 extern wxSizer *IDC_CURJOB;
-const int IDC_CONV_PB_LABEL = 10370;
-const int IDC_CONV_PROZENT = 10371;
-const int IDC_CONV_PB_CURRENT = 10372;
-const int IDC_JOBLIST = 10373;
-const int IDC_ADDITEM = 10374;
-const int IDC_RETRY = 10375;
-const int IDC_CONVREMOVE = 10376;
+const int IDC_CONV_PB_LABEL = 10371;
+const int IDC_CONV_PROZENT = 10372;
+const int IDC_CONV_PB_CURRENT = 10373;
+const int IDC_JOBLIST = 10374;
+const int IDC_ADDITEM = 10375;
+const int IDC_RETRY = 10376;
+const int IDC_CONVREMOVE = 10377;
 wxSizer *convertDlg( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-const int ID_STATICETXT = 10377;
-const int ID_KADINFO = 10378;
+const int ID_STATICETXT = 10378;
+const int ID_KADINFO = 10379;
 wxSizer *Kad_Info( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
 extern wxSizer *netSizer;
-const int ID_NETNOTEBOOK = 10379;
+const int ID_NETNOTEBOOK = 10380;
 wxSizer *NetDialog( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
 extern wxSizer *IDC_PREFS_EVENTS_PAGE;
-const int IDC_EVENTLIST = 10380;
+const int IDC_EVENTLIST = 10381;
 wxSizer *PreferencesEventsTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
 // Declare menubar functions
 
 // Declare toolbar functions
 
-const int ID_BUTTONCONNECT = 10381;
-const int ID_BUTTONNETWORKS = 10382;
-const int ID_BUTTONSEARCH = 10383;
-const int ID_BUTTONTRANSFER = 10384;
-const int ID_BUTTONSHARED = 10385;
-const int ID_BUTTONMESSAGES = 10386;
-const int ID_BUTTONSTATISTICS = 10387;
-const int ID_BUTTONNEWPREFERENCES = 10388;
-const int ID_BUTTONIMPORT = 10389;
-const int ID_ABOUT = 10390;
+const int ID_BUTTONCONNECT = 10382;
+const int ID_BUTTONNETWORKS = 10383;
+const int ID_BUTTONSEARCH = 10384;
+const int ID_BUTTONTRANSFER = 10385;
+const int ID_BUTTONSHARED = 10386;
+const int ID_BUTTONMESSAGES = 10387;
+const int ID_BUTTONSTATISTICS = 10388;
+const int ID_BUTTONNEWPREFERENCES = 10389;
+const int ID_BUTTONIMPORT = 10390;
+const int ID_ABOUT = 10391;
 void muleToolbar( wxToolBar *parent );
 
 // Declare bitmap functions
